--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "react": "16.8.3",
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
+    "react-native-gesture-handler": "^1.3.0",
+    "react-native-picker-select": "^6.2.0",
     "react-native-web": "^0.11.4",
-    "react-navigation": "^3.11.0"
+    "react-navigation": "^3.0.8"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.1.0",
