Fixed play console error saying version code is the same

--- a/app.json
+++ b/app.json
@@ -28,6 +28,7 @@
       "supportsTablet": true
     },
     "android": {
+      "versionCode": 2,
       "package": "com.andordavoti.geazyalbums"
     }
   }
