--- a/package.json
+++ b/package.json
@@ -17,16 +17,18 @@
     "@react-navigation/web": "^1.0.0-alpha.9",
     "expo": "^33.0.0",
     "expo-asset": "^5.0.0",
-    "expo-constants": "^5.0.0",
+    "expo-constants": "^5.0.1",
     "expo-font": "^5.0.0",
     "expo-web-browser": "^5.0.0",
     "react": "16.8.3",
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
+    "react-native-gesture-handler": "^1.3.0",
     "react-native-picker-select": "^6.2.0",
     "react-native-shapes": "^0.1.0",
     "react-native-web": "^0.11.4",
-    "react-navigation": "^3.0.8"
+    "react-navigation": "^3.0.8",
+    "react-navigation-drawer": "^2.0.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.1.0",
