--- a/package.json
+++ b/package.json
@@ -12,30 +12,24 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/samples": "~3.0.0",
-    "@expo/vector-icons": "^10.0.1",
+    "@expo/samples": "~3.0.3",
+    "@expo/vector-icons": "^10.0.3",
     "@react-navigation/web": "^1.0.0-alpha.9",
-    "expo": "^33.0.0",
-    "expo-asset": "^5.0.0",
-    "expo-constants": "^5.0.1",
-    "expo-font": "^5.0.0",
-    "expo-web-browser": "^5.0.0",
+    "expo": "^34.0.1",
+    "expo-asset": "^6.0.0",
+    "expo-constants": "6.0.0",
+    "expo-font": "~6.0.0",
+    "expo-web-browser": "6.0.0",
     "react": "16.8.3",
     "react-dom": "^16.8.6",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
-    "react-native-gesture-handler": "^1.3.0",
-    "react-native-picker-select": "^6.2.0",
-    "react-native-shapes": "^0.1.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
+    "react-native-gesture-handler": "~1.3.0",
     "react-native-web": "^0.11.4",
-    "react-navigation": "^3.0.8",
-    "react-navigation-drawer": "^2.0.0"
+    "react-navigation": "^3.11.0"
   },
   "devDependencies": {
-    "babel-preset-expo": "^5.1.0",
-    "eslint": "^6.0.1",
-    "eslint-config-google": "^0.13.0",
-    "eslint-plugin-react": "^7.14.2",
-    "jest-expo": "^33.0.0"
+    "babel-preset-expo": "^6.0.0",
+    "jest-expo": "^34.0.0"
   },
   "private": true
 }
