Added password for IOS distribution cert

--- a/app.json
+++ b/app.json
@@ -24,7 +24,7 @@
       "**/*"
     ],
     "ios": {
-      "bundleIdentifier": "com.andordavoti.geazy",
+      "bundleIdentifier": "com.ovitas.geazy",
       "supportsTablet": true
     },
     "android": {
