--- a/app.json
+++ b/app.json
@@ -3,12 +3,8 @@
     "name": "G-Eazy",
     "slug": "g-eazy-app",
     "privacy": "public",
-    "platforms": [
-      "ios",
-      "android",
-      "web"
-    ],
-    "version": "1.2.10",
+    "platforms": ["ios", "android", "web"],
+    "version": "1.3.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
     "splash": {
@@ -19,15 +15,13 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "bundleIdentifier": "com.ovitas.geazy",
       "supportsTablet": false
     },
     "android": {
-      "versionCode": 11,
+      "versionCode": 12,
       "package": "com.andordavoti.geazyalbums"
     }
   }
